--- a/public/template/cellar_people.html
+++ b/public/template/cellar_people.html
@@ -32,11 +32,11 @@
     	<div class="whitespace">
         <div id="hp">
           <div class="hp_header">
-            <div class="hp_right"><a href="#" class="btn_red_sb"><span>我的酒窖</span></a></div>
+            <div class="hp_right"><a href="#" class="btn_red_sb"><span>他的酒窖</span></a></div>
             <div class="hp_userimg"><a href="#"><img src="images/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
             <div class="hp_info">
                 <div class="username">不良夏生</div>
-                <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
+                <div class="mystatu">准备小宇宙爆发...</div>
                 <div class="item"><span class="icon_fol mr5">已关注</span><span class="icon_fol_e mr5">互相关注<span class="cancl_fol"> <a href="#">(取消)</a></span></span><a class="icon_mail" href="#">发私信</a></div>
                 <ul class="hp_navi">
                     <li class="current"><a href="cellar.html">12<br/>藏酒</a></li>
