--- a/public/template/search_wine.html
+++ b/public/template/search_wine.html
@@ -38,38 +38,15 @@
                 <div class="clear"></div>
 <div class="tabs">
                   <ul>
-                    <li class="current"><a href="#">全部</a></li>
-                    <li><a href="search_wine.html">酒款</a></li>
+                    <li><a href="search.html">全部</a></li>
+                    <li class="current"><a href="search_wine.html">酒款</a></li>
                     <li><a href="search_winery.html">酒庄</a></li>
                   </ul>
                 </div>
                 <div class="clear"></div>
               <div class="nor_notice mb20">太好了，我们找到了一些相关内容：</div>
-                <div class="winery_result">
-                    <ul>
-                    	<li>
-                            <a href="#"><img src="images/test/winery70.jpg" width="70" height="70" alt="winery name" /></a>
-                            <div class="meta">
-                            	<h1 class="zh"><a href="#">某某酒庄</a></h1>
-                                <h1 class="en"><a href="#">THE MOREFM WINERY</a></h1>
-                                <p class="location">法国 > 波尔多</p>
-                          </div>
-                        </li>
-                        <li>
-                            <a href="#"><img src="images/test/winery70_2.jpg" width="70" height="70" alt="winery name" /></a>
-                            <div class="meta">
-                            	<h1 class="zh"><a href="#">某某酒庄</a></h1>
-                                <h1 class="en"><a href="#">THE MOREFM WINERY</a></h1>
-                                <p class="location">法国 > 波尔多</p>
-                          </div>
-                      </li>
-                        <li class="more"><a href="search_winery.html">更多...</a></li>
-                        <div class="clear"></div>
-                    </ul>
-                    <div class="clear"></div>
-                </div>
-                <div class="wine_list">
-                        	<div class="box590">
+              <div class="wine_list">
+                   	  <div class="box590">
                             	<div class="box590_t"></div>
                             	<div class="box590_main">
                                 <a href="wine_profile.html"><img src="images/test/wine70.jpg" width="70" height="70" alt="wine name" /></a>
@@ -140,10 +117,13 @@
                             <div class="box590_b"></div>
                           </div>
               </div>
+              <div class="pagination">
+                  <span class="disabled"> < </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> > </a><br />
+              </div>
               </div>
             <div class="right">
             	<div class="sidebar">
-                	<div class="title">或许你会对这些人感兴趣...</div>
+                	<div class="title"><h3>或许你会对这些人感兴趣...</h3></div>
                     <ul class="userlist">
                     	<li>
                         	<div class="userpic"><a href="#"><img src="images/userimage/04.jpg" width="50" height="50" /></a></div>
