--- a/public/template/search_winery.html
+++ b/public/template/search_winery.html
@@ -118,7 +118,7 @@
               </div>
             <div class="right">
             	<div class="sidebar">
-                	<div class="title"><h3>或许你会对这些人感兴趣...</h3></div>
+                	<div class="title">或许你会对这些人感兴趣...</div>
                     <ul class="userlist">
                     	<li>
                         	<div class="userpic"><a href="#"><img src="images/userimage/04.jpg" width="50" height="50" /></a></div>
