--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -50,7 +50,7 @@ input.common_search {width:250px;}
 .float_r {float:right;}
 .font12 {font-size:12px;}
 .font14 {font-size:14px;}
-.notice_b, .sidebar .title {font-size:14px;font-weight:bold;}
+.notice_b{font-size:14px;font-weight:bold;}
 .span550 {width:550px;}
 .span520 {width:520px;}
 .span508 {width:508px;}
