用户发私信改为使用名字查找； admin 管理winery， 从csv导入酒庄信息。

--- a/app/views/mine/wines/add_step_one.html.erb
+++ b/app/views/mine/wines/add_step_one.html.erb
@@ -1,6 +1,6 @@
 <div id="mainspace860" class="addwine">
   <div class="addwine">
-    <h1 class="main_title">添加藏酒</h1>
+    <h1 class="main_title">添加酒款</h1>
     <div class="step">
       <div class="step_fir"></div>
     </div>
