--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -14,13 +14,10 @@
 
     <!-- header-content end -->
   </div>
-
-
 </div>
-
 </header>
 <script type="text/javascript" >
-  $('#search').bind( 'keyup' , function(){
+  var getHotSerach = function(){
     $.ajax({
       url: '/searches/hot_words?word='+this.value,
       success: function( data ){
@@ -39,5 +36,10 @@
         $('#hot-search-list').html( html );
       }
     });
+  }
+
+  $('#search').bind( 'keyup' , function(){
+    clearTimeout( timer );
+    timer = setTimeout( getHotSerach , 1000 );
   });
 </script>
