--- a/app/views/themes/waterfall/wine_details/_timeline.html.erb
+++ b/app/views/themes/waterfall/wine_details/_timeline.html.erb
@@ -1,23 +1,78 @@
 <% @timelines.each do |l| %>
-<div class="ks-waterfall item about_with_wine">
-   <p class="wine_cover">
-     <%= wine_waterfall_image_tag(l.secondary_actor, :thumb_name => :w_middle) %>
-   </p>
-   <h3>
-     <%= link_to  wine_path(l.secondary_actor) do %>
-       <%= raw l.secondary_actor.cname %><br />
-       <span class="font_14"><%= raw l.secondary_actor.ename %></span>
-     <% end %>
-   </h3>
-   <p class="event_type">
-     <%= APP_DATA["timeline"]["event"]["user"][l.event_type] %>
-   </p>
-   <div class="sub_item">
-     <div class="pic">
-       <%= link_to_user l.actor, user_path(l.actor, :trailing_slash => true), :with_avatar => true, :avatar_version => :thumb %>
-     </div>
-     <p><%= link_to_user l.actor, user_path(l.actor, :trailing_slash => true) %> <%= l.created_at.to_s(:normal) %> </p>
-     <p class="body"><%#= l.subject.body %></p>
-   </div>
- </div>
+<!-- 关注的酒被评论 -->
+<% if l.event_type == "new_comment" %>
+<div class="iw item">
+  	<div class="iw_img">
+			<%= link_to wine_waterfall_image_tag(l.secondary_actor, :thumb_name => :w_middle), wine_path(l.secondary_actor) %>
+		</div>
+      <div class="iw_info">
+          <h1>
+						<%= raw link_to l.secondary_actor.cname, wine_path(l.secondary_actor) %>
+					</h1>
+          <h2>
+			      <%= raw link_to l.secondary_actor.ename, wine_path(l.secondary_actor) %>
+					</h2>
+          <p class="iw_action">有了新评论</p>
+      </div>
+      <div class="iw_main">
+      	<ul>
+					 <% l.secondary_actor.comments.recent(6).each do |comment|%>
+          	<li>
+              	<div class="left">
+									<%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true), {:with_avatar => true, :avatar_version => :thumb}, {:width => 30, :height => 30} %>
+								</div>
+                  <div class="right">
+                  	<p class="username">
+											<%= link_to_user comment.user, user_path(comment.user, :trailing_slash => true) %>
+										</p>
+                      <p class="content"><%= comment.body %></p>
+                  </div>
+                  <div class="clear"></div>
+              </li>
+            <% end %>
+         </ul>
+      </div>
+      <div class="iw_more">
+				<%= link_to  wine_comments_path(l.secondary_actor) do %>
+				共<%= l.secondary_actor.comments_count %>条评论
+				<% end %>
+				</div>
+</div>
+<!-- 关注的酒被加入酒窖 -->
+<% elsif l.event_type == "add_to_cellar" %>
+<div class="iw item">
+  	<div class="iw_img">
+				<%= link_to wine_waterfall_image_tag(l.secondary_actor, :thumb_name => :w_middle), wine_path(l.secondary_actor) %>
+		</div>
+      <div class="iw_info">
+        <h1>
+					<%= raw link_to l.secondary_actor.cname, wine_path(l.secondary_actor) %>
+				</h1>
+        <h2>
+		      <%= raw link_to l.secondary_actor.ename, wine_path(l.secondary_actor) %>
+				</h2>							
+          <p class="iw_action">有人把它加入了酒窖</div>
+      <div class="iw_main">
+      	<ul>
+          	<li>
+              	<div class="left">
+									<%= link_to_user l.actor, user_path(l.actor, :trailing_slash => true), :with_avatar => true, :avatar_version => :thumb %>
+								</div>
+                  <div class="right">
+                  	<p class="username">
+                   	<%= link_to_user l.actor, user_path(l.actor, :trailing_slash => true) %>
+										</p>
+                  </div>
+                  <div class="clear"></div>
+              </li>
+          </ul>
+      </div>
+      <div class="iw_more">
+      	<%= link_to "去看看他的酒窖", user_cellar_path(l.actor, l.actor)%>
+      </div>
+</div>
+
+<% end %>
+
+
 <% end %>
