--- a/app/views/themes/waterfall/wine_details/index.html.erb
+++ b/app/views/themes/waterfall/wine_details/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :css  do %>
+<%= theme_stylesheet_link_tag :home %>
+<% end %>
+
 <div id="container" style="position: relative; ">
 <%= render "timeline" %>
 <div style="display: none">
