--- a/public/template/winery_comment_list.html
+++ b/public/template/winery_comment_list.html
@@ -129,6 +129,7 @@
                                                         <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
                                                     </div>
                                                 </li>
+                                                <div class="clear"></div>
                                             </ul>
                                         </div>
                                         <div class="botton"></div>
