--- a/public/template/wine_profile.html
+++ b/public/template/wine_profile.html
@@ -4,7 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>iWine</title>
 <link href="stylesheets/main.css" rel="stylesheet" type="text/css" />
-<link href="stylesheets/hp.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/wine.css" rel="stylesheet" type="text/css" />
 <link href="stylesheets/thumb.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
@@ -33,91 +32,51 @@
     </div>
     <div id="wrapper950">
         <div id="wp_left">
-        	<div class="wp_space_line">
-            	<h1 class="wine_name_ch">2005 波特米勒站赤霞珠干红葡萄酒</h1>
+       	  <div class="wp_space_line">
+            	<p class="mt20 float_r"><a href="#" class="btn_gray float_r"><span>返回</span></a><a href="#" class="btn_gray float_r"><span>添加评论</span></a></p>
+                <h1 class="wine_name_ch">2005 波特米勒站赤霞珠干红葡萄酒的评论</h1>
                 <h1 class="wine_name_en">2005 PORTER MILL STATION Cabernet Sauvignon</h1>
             </div>
-            <div class="wp_space_line ptb10">
-            	<div class="share float_r pt5">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
-                <div><a href="#" class="btn_gray mr5"><span>关注</span></a><a href="#" class="btn_gray mr5"><span>评论</span></a><a href="#" class="btn_gray mr5"><span>写品酒辞</span></a><a href="#" class="btn_gray"><span>加入酒窖</span></a></div>
-                <div class="clear"></div>
-            </div>
-        <div class="wp_space_line">
-           	  <div id="preview_wrap">
-                <div id="preview_outer">
-                    <div id="preview_inner">
-                        <div>
-                            <img src="images/test/wine_profile_pic_b.jpg" alt="Leonardo Maia" />
-                            <!--<a href="http://www.leonardomaia.com.br/">2001拉菲珍宝</a>-->	
-                        </div>
-                        <div>
-                            <img src="images/test/wine440_02.jpg" alt="skillicorn" />
-                        </div>
-                        <div>
-                            <img src="images/test/wine440_03.jpg" alt="theenergycell" />
-                        </div>
-                        <div>
-                            <img src="images/test/wine440_04.jpg" alt="Fred Maya" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-          <div id="thumbs">
-              <!--<div id="arrow"></div>-->
-              <span><img src="images/test/wine_thumb01.jpg" alt="Leonardo Maia" /></span>
-              <span><img src="images/test/wine_thumb02.jpg" alt="skillicorn" /></span>
-              <span><img src="images/test/wine_thumb03.jpg" alt="theenergycell" /></span>
-              <span><img src="images/test/wine_thumb04.jpg" alt="Fred Maya" /></span>
-          </div>
-          </div>
             <div class="wp_space_line ptb30">
-                <h2>介绍</h2>
-                <div>拉菲庄是由一名姓拉菲（Lafite）的贵族创园于1354年，在十四世纪已相当有名气。到了1675年她由当时世界的酒业一号人物希刚公爵（J. D. Segur）购得。希刚当时在酒界叱咤风云，他同时拥有顶级的历史名庄拉图（Chateau Latour）、木桐（Chateau Mouton）和凯龙世家（Chateau Calon-Segur）。法王路易十四曾说希刚家族可能是法国最富有的家族。在十七世纪，法国基本上是勃艮第（Burgundy）酒的天下。而当时上流社会的著名"交际花"法王路易十五的情妇庞巴迪因在罗曼尼酒庄的争夺中，输给了路易十五的堂兄弟，波旁王朝的亲王，康帝亲王（Prince de Conti），因而把兴趣转投向拉菲，令拉菲往往成为凡尔赛宫贵族们的杯中佳物。1755年希刚家族的第三代掌门人去世后，拉菲产权进入了一段较为混乱的历史时期。但拉菲酒的品质依旧不为人失望...(阅读全部)</div>
-            </div>
-          <div class="wp_space_line ptb30">
-            <div class="title_btn">
-                    <a href="#" class="btn_gray float_r"><span>添加照片</span></a>
-                    <h2>所有照片<span class="font12">（<a href="wine_photo_all.html">共12张...</a>）</span></h2>
-                    <div class="clear"></div>
-            </div>
-              <ul class="wine_img">
-               	<li><a href="#"><img src="images/test/wine100_01.jpg" width="100" height="100" alt="wine name" /></a></li>
-                <li><a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a></li>
-                <li><a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a></li>
-                <li><a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a></li>
-                <li><a href="#"><img src="images/test/wine100_05.jpg" width="100" height="100" alt="wine name" /></a></li>
-                <li><a href="#"><img src="images/test/wine100_06.jpg" width="100" height="100" alt="wine name" /></a></li>
-                <div class="clear"></div>
-              </ul>
-          </div>
-            <div class="wp_space_line ptb30">
-                <div class="title_btn">
-                    <h2>喜欢这支酒的人还喜欢...</h2>
-                </div>
-                <ul class="wine_img">
-                    <li><a href="#"><img src="images/test/wine100_01.jpg" width="100" height="100" alt="wine name" /></a></li>
-                    <li><a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a></li>
-                    <li><a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a></li>
-                    <li><a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a></li>
-                    <li><a href="#"><img src="images/test/wine100_05.jpg" width="100" height="100" alt="wine name" /></a></li>
-                    <li><a href="#"><img src="images/test/wine100_06.jpg" width="100" height="100" alt="wine name" /></a></li>
-                    <div class="clear"></div>
-                </ul>
-            </div>
-            <div class="wp_space_line ptb30">
-                <div class="title_btn">
-                    <a href="#" class="btn_gray float_r"><span>添加评论</span></a>
-                    <h2>评论<span class="font12">（<a href="wine_comment_list.html">共24条...</a>）</span></h2>
-                    <div class="clear"></div>
-                </div>
-                <ul class="wine_comment_list">
+                <ul class="comment_list clearfix">
                 	<li>
                     	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
                         <div class="main">
                         	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
                             <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
-                            <div class="userful"><a href="#">有用(3)</a></div>
-                        </div>
+                            <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(3)</a></div>
+                                <div class="replybox">
+                                    	<div class="top"></div>
+                                        <div class="middle">
+                                        	<div class="post clearfix"><a href="#" class="btn_gray float_r"><span>回复</span></a><textarea name="" cols="" rows=""></textarea></div>
+                                            <ul class="reply_list clearfix">
+                                            	<li>
+                                                	<div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                                    <div class="main">
+                                                    	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                	<div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                                    <div class="main">
+                                                    	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                	<div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                                    <div class="main">
+                                                    	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                                    </div>
+                                                </li>
+                                                <div class="clear"></div>
+                                            </ul>
+                                        </div>
+                                        <div class="botton"></div>
+                          </div>
+                      </div>
                       <div class="clear"></div>
                     </li>
                    <li>
@@ -125,7 +84,7 @@
                         <div class="main">
                         	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><!--<span class="control"><a href="#">回复</a> | <a href="#">删除</a></span>--></div>
                             <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈；</div>
-                            <div class="userful"><a href="#">有用(3)</a></div>
+                            <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(1)</a></div>
                         </div>
                         <div class="clear"></div>
                   </li>
@@ -136,14 +95,72 @@
                             <div class="content">
                             <!--<p class="reply">好诱人的咖喱啊，我也好想吃！</p>-->
                           我比较喜欢意大利的酒，这款朋友送过，价格不贵，外包装看起来也挺高档的.</div>
-                            <div class="userful"><a href="#">有用(3)</a></div>
+                            <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(0)</a></div>
                         </div>
                         <div class="clear"></div>
                     </li>
                 </ul>
+                <div class="clear"></div>
             </div>
+            
+            
+            
       </div>
-        <div id="wp_right">fdsafd</div>
+        <div id="wp_right">
+      <div class="wp_count clearfix">
+            	<a href="#">1234<br/>关注</a><a href="#">1234<br/>拥有</a><a href="#">1234<br/>评论</a><a href="#">1234<br/>品酒辞</a><a href="#">1234<br/>照片</a>
+                  <div class="clear"></div>
+          </div>
+            <div class="wine_id_pic"><img src="images/test/wine_id_pic.jpg" width="100" height="100" alt="winename" /></div>
+            <div class="info">
+                酒庄：<a href="#">DRC官方</a><br />
+                官网：<a href="#">http://www.romanee-conti.fr/</a><br />
+                产区：法国>勃艮第>夜丘>维森-罗曼尼>罗曼尼-康帝（特级田）<br />
+                France>Burgundy>Côte de Nuits>Vosne-Romanée>Romanée-Conti (Grand Cru AOC)<br />
+                类型：红葡萄酒<br />
+                容量：750ml<br />
+                酒精度：13％Vol<br />
+                葡萄品种：Pinot Noir(25%)、 Pinot Noir (75%) 
+          </div>
+              <div class="score_star">
+                  	<span class="star star_b_s45"></span>
+                    <span class="iw_score"><span class="redscore">8.5</span> 分，32人评价</span>
+                <div class="clear"></div>
+              </div>
+              <div class="pro_score">
+              	<table width="250" border="0" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <th class="critic">评论家</th>
+                    <th class="score">得分</th>
+                    <th class="year">适饮年限</th>
+                  </tr>
+                  <tr>
+                    <td class="critic">Jancis Robinson</td>
+                    <td>18/20</td>
+                    <td>2014-2024</td>
+                  </tr>
+                  <tr>
+                    <td class="critic">Wine Spectator </td>
+                    <td>94/100</td>
+                    <td>&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td class="critic">iWine</td>
+                    <td>95/100</td>
+                    <td>&nbsp;</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="wp_price">
+           	  价格：<span class="price_b">￥2580</span> 起 <a href="#">(更多价格信息+)</a>
+              </div>
+          <div class="wp_price">
+            <p>更多年份</p>
+                    <p class="year"><span><a href="wine_profile.html">2010</a></span><span><a href="wine_profile.html">2009</a></span><span><a href="#">2008</a></span><span><a href="#">2005</a></span><span><a href="#">2003</a></span><span><a href="#">2001</a></span><span><a href="#">2000</a></span></p>
+                <p class="mt10"><a href="#"><img src="images/icon/open.gif" width="13" height="13" alt="查看所有年份" /></a></p>
+            </div>
+            <div class=""><a href="#" class="btn_gray"><span>信息纠错与补充</span></a></div>
+           </div>
         <div class="clear"></div>   
     </div>
     </div>
