wine profile update

--- a/public/template/wine_profile.html
+++ b/public/template/wine_profile.html
@@ -33,11 +33,82 @@
     <div id="wrapper950">
         <div id="wp_left">
        	  <div class="wp_space_line">
-            	<p class="mt20 float_r"><a href="#" class="btn_gray float_r"><span>返回</span></a><a href="#" class="btn_gray float_r"><span>添加评论</span></a></p>
-                <h1 class="wine_name_ch">2005 波特米勒站赤霞珠干红葡萄酒的评论</h1>
+            	<h1 class="wine_name_ch">2005 波特米勒站赤霞珠干红葡萄酒</h1>
                 <h1 class="wine_name_en">2005 PORTER MILL STATION Cabernet Sauvignon</h1>
             </div>
+            <div class="wp_space_line ptb10">
+           	  <div class="share float_r pt5">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
+                <div><a href="#" class="btn_gray mr5"><span>关注</span></a><a href="#" class="btn_gray mr5"><span>评论</span></a><a href="#" class="btn_gray mr5"><span>写品酒辞</span></a><a href="#" class="btn_gray"><span>加入酒窖</span></a></div>
+                <div class="clear"></div>
+            </div>
+        <div class="wp_space_line">
+           	  <div id="preview_wrap">
+                <div id="preview_outer">
+                    <div id="preview_inner">
+                        <div>
+                            <img src="images/test/wine_profile_pic_b.jpg" alt="Leonardo Maia" />
+                            <!--<a href="http://www.leonardomaia.com.br/">2001拉菲珍宝</a>-->	
+                        </div>
+                        <div>
+                            <img src="images/test/wine440_02.jpg" alt="skillicorn" />
+                        </div>
+                        <div>
+                            <img src="images/test/wine440_03.jpg" alt="theenergycell" />
+                        </div>
+                        <div>
+                            <img src="images/test/wine440_04.jpg" alt="Fred Maya" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+          <div id="thumbs">
+              <!--<div id="arrow"></div>-->
+              <span><img src="images/test/wine_thumb01.jpg" alt="Leonardo Maia" /></span>
+              <span><img src="images/test/wine_thumb02.jpg" alt="skillicorn" /></span>
+              <span><img src="images/test/wine_thumb03.jpg" alt="theenergycell" /></span>
+              <span><img src="images/test/wine_thumb04.jpg" alt="Fred Maya" /></span>
+          </div>
+          </div>
             <div class="wp_space_line ptb30">
+                <h2>介绍</h2>
+                <div>拉菲庄是由一名姓拉菲（Lafite）的贵族创园于1354年，在十四世纪已相当有名气。到了1675年她由当时世界的酒业一号人物希刚公爵（J. D. Segur）购得。希刚当时在酒界叱咤风云，他同时拥有顶级的历史名庄拉图（Chateau Latour）、木桐（Chateau Mouton）和凯龙世家（Chateau Calon-Segur）。法王路易十四曾说希刚家族可能是法国最富有的家族。在十七世纪，法国基本上是勃艮第（Burgundy）酒的天下。而当时上流社会的著名"交际花"法王路易十五的情妇庞巴迪因在罗曼尼酒庄的争夺中，输给了路易十五的堂兄弟，波旁王朝的亲王，康帝亲王（Prince de Conti），因而把兴趣转投向拉菲，令拉菲往往成为凡尔赛宫贵族们的杯中佳物。1755年希刚家族的第三代掌门人去世后，拉菲产权进入了一段较为混乱的历史时期。但拉菲酒的品质依旧不为人失望...(阅读全部)</div>
+            </div>
+          <div class="wp_space_line ptb30">
+            <div class="title_btn">
+                    <a href="#" class="btn_gray float_r"><span>添加照片</span></a>
+                    <h2>所有照片<span class="font12 more"><a href="wine_photo_all.html">（共12张...）</a></span></h2>
+                    <div class="clear"></div>
+            </div>
+              <ul class="wine_img">
+               	<li><a href="#"><img src="images/test/wine100_01.jpg" width="100" height="100" alt="wine name" /></a></li>
+                <li><a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a></li>
+                <li><a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a></li>
+                <li><a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a></li>
+                <li><a href="#"><img src="images/test/wine100_05.jpg" width="100" height="100" alt="wine name" /></a></li>
+                <li><a href="#"><img src="images/test/wine100_06.jpg" width="100" height="100" alt="wine name" /></a></li>
+                <div class="clear"></div>
+              </ul>
+          </div>
+            <div class="wp_space_line ptb30">
+                <div class="title_btn">
+                    <h2>喜欢这支酒的人还喜欢...</h2>
+                </div>
+                <ul class="wine_img">
+                    <li><a href="#"><img src="images/test/wine100_01.jpg" width="100" height="100" alt="wine name" /></a></li>
+                    <li><a href="#"><img src="images/test/wine100_02.jpg" width="100" height="100" alt="wine name" /></a></li>
+                    <li><a href="#"><img src="images/test/wine100_03.jpg" width="100" height="100" alt="wine name" /></a></li>
+                    <li><a href="#"><img src="images/test/wine100_04.jpg" width="100" height="100" alt="wine name" /></a></li>
+                    <li><a href="#"><img src="images/test/wine100_05.jpg" width="100" height="100" alt="wine name" /></a></li>
+                    <li><a href="#"><img src="images/test/wine100_06.jpg" width="100" height="100" alt="wine name" /></a></li>
+                    <div class="clear"></div>
+                </ul>
+            </div>
+            <div class="wp_space_line ptb30">
+                <div class="title_btn">
+                    <a href="#" class="btn_gray float_r"><span>添加评论</span></a>
+                    <h2>评论<span class="font12 more"><a href="wine_comment_list.html">（共24条...）</a></span></h2>
+                    <div class="clear"></div>
+                </div>
                 <ul class="comment_list clearfix">
                 	<li>
                     	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
@@ -102,9 +173,88 @@
                 </ul>
                 <div class="clear"></div>
             </div>
-            
-            
-            
+            <div class="wp_space_line ptb30">
+            	<div class="title_btn">
+            		<h2>他们关注<span class="font12 more"><a href="wine_comment_list.html">（共31人...）</a></span></h2>
+               </div>
+               <ul class="wp_follower">
+               	  <li><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/01.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/02.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/3.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/4.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/04.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/05.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/06.jpg" width="50" height="50" alt="username" /></li>
+                  <li><img src="images/userimage/07.jpg" width="50" height="50" alt="username" /></li>
+                  <div class="clear"></div>
+              </ul>
+            </div>
+            <div class="wp_space_line ptb30">
+            	<div class="title_btn">
+            		<h2>他们拥有，或许也愿意出售<span class="font12 more"><a href="wine_comment_list.html">（共31人...）</a></span></h2>
+               </div>
+               <ul class="wp_owner">
+               	<li>
+                	<div class="userpic"><a href="#"><img src="images/userimage/05.jpg" width="50" height="50" alt="username" /></a></div>
+                    <div class="info">
+                    	<p class="username"><a href="#">菠菜</a></p>
+                        <p>2支 | <span class="price">￥240.00</span>/支</p>
+                    </div>
+                </li>
+                <li>
+                	<div class="userpic"><a href="#"><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></a></div>
+                    <div class="info">
+                    	<p class="username"><a href="#">猪猪</a></p>
+                      <p>2支 | <span class="price">￥240.00</span>/支</p>
+                    </div>
+                </li>
+                <li>
+                	<div class="userpic"><a href="#"><img src="images/userimage/06.jpg" width="50" height="50" alt="username" /></a></div>
+                    <div class="info">
+                    	<p class="username"><a href="#">Melody</a></p>
+                        <p>2支 | <span class="price">￥240.00</span>/支</p>
+                    </div>
+                </li>
+                <li>
+                	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
+                    <div class="info">
+                    	<p class="username"><a href="#">不良夏生</a></p>
+                        <p>2支 | <span class="price">￥240.00</span>/支</p>
+                    </div>
+                </li>
+                <div class="clear"></div>
+               </ul>
+            </div>
+            <div class="wp_space_line ptb30">
+            	<div class="title_btn clearfix">
+            		<a href="#" class="btn_gray float_r"><span>组织活动</span></a>
+                    <h2>相关活动<span class="font12 more"><a href="wine_comment_list.html">（共2个...）</a></span></h2>
+               </div>
+               <ul class="wp_event">
+               	<li>
+                	<div class="thumb"><a href="#"><img src="images/test/event50_1.jpg" width="50" height="50" alt="username" /></a></div>
+                    <div class="info">
+                    	<p class="title"><a href="#">北京勃艮第品酒会</a></p>
+                        <p>时间: 2012-1-14<br />
+                        地点: 上海徐汇区美罗城5楼超极电影院<br />
+                        14人关注</p>
+                    </div>
+                </li>
+                <li>
+                	<div class="thumb"><a href="#"><img src="images/test/event50_2.jpg" width="50" height="50" alt="username" /></a></div>
+                    <div class="info">
+                    	<p class="title"><a href="#">欧美红酒品鉴活动</a></p>
+                      <p>时间: 2012-3-21<br />
+                      地点: 北京国贸建外SOHO3号楼2504<br />
+                      5人关注</p>
+                    </div>
+                </li>
+                <div class="clear"></div>
+               </ul>
+            </div>
       </div>
         <div id="wp_right">
       <div class="wp_count clearfix">
@@ -156,7 +306,7 @@
               </div>
           <div class="wp_price">
             <p>更多年份</p>
-                    <p class="year"><span><a href="wine_profile.html">2010</a></span><span><a href="wine_profile.html">2009</a></span><span><a href="#">2008</a></span><span><a href="#">2005</a></span><span><a href="#">2003</a></span><span><a href="#">2001</a></span><span><a href="#">2000</a></span></p>
+                <p class="year"><span><a href="wine_profile.html">2010</a></span><span><a href="wine_profile.html">2009</a></span><span><a href="#">2008</a></span><span><a href="#">2005</a></span><span><a href="#">2003</a></span><span><a href="#">2001</a></span><span><a href="#">2000</a></span></p>
                 <p class="mt10"><a href="#"><img src="images/icon/open.gif" width="13" height="13" alt="查看所有年份" /></a></p>
             </div>
             <div class=""><a href="#" class="btn_gray"><span>信息纠错与补充</span></a></div>
