wine profile update

--- a/public/template/wine_profile.html
+++ b/public/template/wine_profile.html
@@ -38,7 +38,7 @@
             </div>
             <div class="wp_space_line ptb10">
            	  <div class="share float_r pt5">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
-                <div><a href="#" class="btn_gray mr5"><span>关注</span></a><a href="#" class="btn_gray mr5"><span>评论</span></a><a href="#" class="btn_gray mr5"><span>写品酒辞</span></a><a href="#" class="btn_gray"><span>加入酒窖</span></a></div>
+                <div><span class="icon_fol mr5">已关注</span><a href="#" class="btn_gray mr5"><span>关注</span></a><a href="#" class="btn_gray mr5"><span>评论</span></a><a href="#" class="btn_gray mr5"><span>写品酒辞</span></a><a href="#" class="btn_gray"><span>加入酒窖</span></a></div>
                 <div class="clear"></div>
             </div>
         <div class="wp_space_line">
