--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -43,7 +43,7 @@ i {color:#ccc;}
 textarea, input, select {font-size:12px;color:#666;font-family:Arial, Helvetica, sans-serif;}
 textarea, input.text {border:1px solid #ccc;background-color:#f9f9f9;}
 textarea, input {padding:5px;}
-input.radio, input.checkbox{border:none;padding:0;margin:0;vertical-align: ;}
+input.radio, input.checkbox{border:none;padding:0;margin:0;}
 input.common_search {width:250px;}
 #top_search {background: none repeat scroll 0 0 #fff;box-shadow:inset 0px 1px 2px #666;border-radius: 30px 30px 30px 30px;height: 30px;overflow: hidden;width: 300px;}
 #top_search input.search_btn {float:right;margin:-3px 0 0 0;}
