--- a/public/template/search.html
+++ b/public/template/search.html
@@ -11,12 +11,18 @@
 	<div id="header">
     <div class="main950">
         	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
-            <form action="search.html">
-                <div id="top_search">
-                    <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
-                    <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
-                </div>
-            </form>
+            <div class="search">
+                <form action="search.html">
+                    <div id="top_search">
+                        <input class="search_btn" name="" type="image" src="images/icon/search.gif"/>
+                        <input class="search" name="" type="text" placeholder="搜索酒款、酒庄" />
+                    </div>
+                    <div class="search_scroll">
+                            <p><a href="#">搜索酒款</a></p>
+                            <p><a href="#">搜索酒庄</a></p>
+                        </div>
+                </form>
+            </div>
             <div id="top_right">
             	<ul>
                 	<li class="userbox">
@@ -27,7 +33,7 @@
             </div>
             <div class="clear"></div>
         </div>
-    </div>
+</div>
     <div id="wrapper950">
         <div class="whitespace normal search">
         	<div class="left">
